* Added statistics to CSS director. * Fixed a bug that prevented a button-as-actor to set its first state image.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+11/08/2011
+----------
+
+* Added statistics to CSS director.
+* Fixed a bug that prevented a button-as-actor to set its first state image.
+
 11/07/2011
 ----------
 
