--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+11/24/2011 *0.1 252*
+
+* Added Keyframes. Keyframes set Behaviors deprecated.
+
+11/24/2011
+----------
+
+* fixed CAAT.Actor.setAsButton to honor disabled status.
+
 11/22/2011
 ----------
 
