--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+12/08/2011 *0.1 Build:351*
+--------------------------
+
+* Added bounding box drawing if CAAT.DEBUG is set.
+
 12/05/2011 *0.1 Build:347*
 --------------------------
 
