--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-01/13/2012 *0.1 Build 437*
+01/13/2012 *0.1 Build 523*
 --------------------------
 
 * Added method CAAT.setCoordinateClamping( bool ) which controls the to-integer coordinate clamping procedure. This
@@ -6,6 +6,9 @@
   begin the beginning of your application the suitable place.
 * Added current scene time to mouseEvent.
 * Removed some unneeded consuming code.
+* Modified CAAT.Debug object to show more info. Added file documentation/debug/debug_template.html with the needed
+  html code for Debug info to be shown. By default, the performance canvas will take window.innerWidth width and it
+  won't resize its size.
 
 12/29/2011 *0.1 Build 429*
 --------------------------
