--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+01/16/2012 *0.1 Build 555*
+--------------------------
+
+* Improved debug panel.
+
+
 01/13/2012 *0.1 Build 523*
 --------------------------
 
