--- a/AUTHORS
+++ b/AUTHORS
@@ -4,5 +4,6 @@ src/lib/Box2dWeb-2.1.a.3.js:
     Erin Catto http://www.gphysics.com
 
 Thanks:
-    Mario Gonzalez [@onedayitwillmake]
+    Mario Gonzalez  [@onedayitwillmake]
+    Rob Boerman     [@robboerman]
 
