--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+01/26/2012 *0.2 Build  52*
+--------------------------
+
+* Added volume to audio elements in audio manager. Call method director.setVolume or audioManager.setVolume
+
+
 01/24/2012 *0.2 Build  48*
 --------------------------
 
